--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ We are an Oregon based design agency built on 15 years of industry experience, c
         <div class="row justify-content-center">
             <div class="col-md-12 col-lg-9">
                 <div class="image-wrap mb-4">
-                    <img src="assets/images/moshed-2023-7-26-1-58.gif" alt="Mobirise Website Builder">
+                    <img src="assets/images/starsour2-594x157.webp" alt="Mobirise Website Builder">
                 </div>
                 
                 <p class="mbr-text mbr-fonts-style display-4"><br><br>Welcome, to <strong><em>Starsour</em>®</strong><br><br><br>We are an Oregon based design company built on 15 years of industry experience, working with clients in Space, Military, Consumer, and Industrial domains. If you have a design challenge, parter with us today.<br><br><br>contact@starsour.com<br></p>
