--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ We are an Oregon based design agency built on 15 years of industry experience, c
                     <img src="assets/images/starsour2-594x157.webp" alt="Mobirise Website Builder">
                 </div>
                 
-                <p class="mbr-text mbr-fonts-style display-4"><br><br>Welcome, to <strong><em>Starsour</em>®</strong><br><br><br>We are an Oregon based design company built on 15 years of industry experience, working with clients in Space, Military, Consumer, and Industrial domains. If you have a design challenge, parter with us today.<br><br><br>contact@starsour.com<br></p>
+                <p class="mbr-text mbr-fonts-style display-4"><br><br>Welcome, to <strong><em>Starsour</em>®</strong><br><br><br>We are an Oregon based design company built on 15 years of industry experience, working with clients in Space, Military, Consumer, and Industrial domains. If you have a design challenge, partner with us today.<br><br><br>contact@starsour.com<br></p>
                 
             </div>
         </div>
